--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,8 @@ nav:
       - Step 2. 순전파: sync/fewshot/step2.md
       - Step 3. 역전파: sync/fewshot/step3.md
       - Step 4. 최적화: sync/fewshot/step4.md
+    - Coding Convention: 
+      - Step 1. Google C++ Guide: sync/convention/step1.md
   - 이곳에 문서 작성하기:
     - Step 1. Markdown 파일: write/markdown.md
     - Step 2. 소스코드 설명하기: write/code.md
