--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,8 +45,7 @@ nav:
     - Coding Convention: 
       - Step 1. Google C++ Guide: 
         - About Coding Convention: sync/convention/step1-1.md
-        - Google C++ Style Guide (1): sync/convention/step1-2.md
-        - Google C++ Style Guide (2): sync/convention/step1-3.md
+        - Google C++ Style Guide: sync/convention/step1-2.md
   - 이곳에 문서 작성하기:
     - Step 1. Markdown 파일: write/markdown.md
     - Step 2. 소스코드 설명하기: write/code.md
